; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_nanoseconds_to_absolutetime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_rtclock.c_nanoseconds_to_absolutetime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@rtclock_sec_divisor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nanoseconds_to_absolutetime(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @NSEC_PER_SEC, align 4
  %8 = sdiv i32 %6, %7
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @rtclock_sec_divisor, align 4
  %10 = mul nsw i32 %8, %9
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @NSEC_PER_SEC, align 4
  %14 = mul nsw i32 %12, %13
  %15 = load i32, i32* %3, align 4
  %16 = sub nsw i32 %15, %14
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @rtclock_sec_divisor, align 4
  %19 = mul nsw i32 %17, %18
  %20 = load i32, i32* @NSEC_PER_SEC, align 4
  %21 = sdiv i32 %19, %20
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, %21
  store i32 %24, i32* %22, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
